Use `torch.optim.SGD` for faster weight decay, fix phis initialisation that were detached from computation graph

--- a/1e100ibu.ipynb
+++ b/1e100ibu.ipynb
@@ -436,26 +436,30 @@
         "    def __init__(self, dataset):\n",
         "        self.ds = dataset\n",
         "        self.init_weights()\n",
+        "        self._optim = torch.optim.SGD(\n",
+        "            params=(\n",
+        "                self.theta,\n",
+        "                *self.phis\n",
+        "            ),\n",
+        "            lr=0.1,\n",
+        "            weight_decay=0.001\n",
+        "        )\n",
         "\n",
         "    def init_weights(self):\n",
         "        word_count = len(self.ds.vocab.get_itos())\n",
-        "        self.theta = torch.rand((word_count, self.ds.aspect_count), requires_grad=True).to(dev)\n",
-        "        with torch.no_grad():\n",
-        "            self.theta *= 0.9\n",
-        "            # enforce 1 initialization on aspect name (page 4)\n",
-        "            aspect_ids = self.ds.vocab.lookup_indices(self.ds.aspects)\n",
-        "            self.theta[aspect_ids, :] = 1\n",
-        "        self.theta.grad = torch.zeros_like(self.theta)\n",
-        "\n",
-        "        aspect_rating_count = [6, 11, 6, 11, 21] # TODO remove\n",
+        "        self.theta = torch.rand((word_count, self.ds.aspect_count)).to(dev)\n",
+        "        # scale to [0.0, 0.9], as we enforce this weight to 1.0 for some words later on\n",
+        "        self.theta = self.theta * 0.9\n",
+        "        # enforce 1 initialization on aspect name (page 4)\n",
+        "        aspect_ids = self.ds.vocab.lookup_indices(self.ds.aspects)\n",
+        "        self.theta[aspect_ids, :] = 1\n",
+        "        self.theta.requires_grad_()\n",
         "\n",
         "        # introduce separate phi for each aspect\n",
-        "        self.phis = [torch.rand((word_count, aspect_rating_count[i]), requires_grad=True).to(dev) for i in range(self.ds.aspect_count)]\n",
-        "\n",
+        "        self.phis = [torch.rand((word_count, self.ds.aspect_max[i])).to(dev) for i in range(self.ds.aspect_count)]\n",
         "        # normalize that sum across all words is 1 for a given aspect (eq. 7)\n",
         "        self.phis = [phi / phi.sum(dim=0) for phi in self.phis]\n",
-        "        for phi in self.phis:\n",
-        "            phi.grad = torch.zeros_like(phi) # otherwise we would got \"'NoneType' object...\" in the first train iteration\n",
+        "        for phi in self.phis: phi.requires_grad_()\n",
         "    \n",
         "    def rev_words_thetas(self, rev_sens_ids):\n",
         "        \"\"\"\n",
@@ -532,27 +536,16 @@
         "                        if 0 == i % 50000:\n",
         "                            ic(ll)\n",
         "                    \n",
-        "                    regularization_loss = torch.mean(torch.square(self.theta))\n",
-        "                    for phi in self.phis:\n",
-        "                        regularization_loss = regularization_loss + torch.mean(torch.square(phi))\n",
-        "                    regularization_loss = regularization_loss * 0.1\n",
         "                    ll_loss = torch.stack(sentence_ll_losses).mean()\n",
-        "                    loss = regularization_loss + ll_loss\n",
-        "                    loss.backward()\n",
+        "                    self._optim.zero_grad()\n",
+        "                    ll_loss.backward()\n",
+        "                    self._optim.step()\n",
         "\n",
-        "                    with torch.no_grad():\n",
-        "                        self.theta -= 0.00001 * self.theta.grad\n",
-        "                        self.phis = [phi - 0.00001 * phi.grad if phi.grad != None else phi for phi in self.phis]\n",
-        "                        if 0 == i % 50000:\n",
-        "                            ic(i)\n",
-        "                            ic(regularization_loss)\n",
-        "                            ic(ll_loss)\n",
-        "                            ic(loss)\n",
-        "                            self.dump_weights()\n",
-        "                        self.theta.grad.zero_()\n",
-        "                        for phi in self.phis:\n",
-        "                            if phi.grad is not None:\n",
-        "                                phi.grad.zero_()\n",
+        "                    if 0 == i % 50000:\n",
+        "                        ic(i)\n",
+        "                        ic(ll_loss)\n",
+        "                        self.dump_weights()\n",
+        "                    \n",
         "        except KeyboardInterrupt:\n",
         "            print('Interrupted.')\n",
         "        except Exception as e:\n",
@@ -561,7 +554,7 @@
       "metadata": {
         "id": "05JPg4ATQTOW"
       },
-      "execution_count": 12,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -572,7 +565,7 @@
       "metadata": {
         "id": "-BbREMkrBEph"
       },
-      "execution_count": 13,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -592,7 +585,7 @@
         ""
       ],
       "metadata": {
-        "id": "jrufTbQ9G3t-"
+        "id": "MepV7uCBul-C"
       },
       "execution_count": null,
       "outputs": []
