Train in batches

--- a/1e100ibu.ipynb
+++ b/1e100ibu.ipynb
@@ -58,9 +58,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "70f9ea9f-5306-49f5-f279-17ab8c3e584a"
+        "outputId": "80999091-e12d-4eb5-e1f9-982630b5bde2"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -80,7 +80,7 @@
       "metadata": {
         "id": "Yet9JpBt8kcx"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -302,7 +302,7 @@
       "metadata": {
         "id": "C1MCM0dWB93e"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -336,9 +336,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e4b485ef-f0c1-43e2-9947-d57ddb82419c"
+        "outputId": "dcbe2626-de8e-4b6d-a37f-c4383e42d5ba"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -347,7 +347,7 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1ebDMDlOxtFh8B5i8lajR7q3kq-0hM02j\n",
             "To: /content/ratebeer.pickle\n",
-            "\r  0%|          | 0.00/322M [00:00<?, ?B/s]\r  2%|1         | 5.77M/322M [00:00<00:05, 56.7MB/s]\r  9%|8         | 28.8M/322M [00:00<00:04, 73.2MB/s]\r 17%|#6        | 53.5M/322M [00:00<00:02, 92.7MB/s]\r 23%|##3       | 75.0M/322M [00:00<00:02, 112MB/s] \r 31%|###1      | 101M/322M [00:00<00:01, 134MB/s] \r 39%|###8      | 125M/322M [00:00<00:01, 154MB/s]\r 45%|####4     | 145M/322M [00:00<00:01, 147MB/s]\r 51%|#####     | 164M/322M [00:00<00:01, 157MB/s]\r 57%|#####7    | 184M/322M [00:00<00:00, 168MB/s]\r 64%|######3   | 204M/322M [00:01<00:00, 177MB/s]\r 70%|#######   | 225M/322M [00:01<00:00, 185MB/s]\r 77%|#######6  | 247M/322M [00:01<00:00, 193MB/s]\r 84%|########3 | 270M/322M [00:01<00:00, 201MB/s]\r 92%|#########1| 295M/322M [00:01<00:00, 214MB/s]\r100%|#########9| 321M/322M [00:01<00:00, 226MB/s]\r100%|##########| 322M/322M [00:01<00:00, 203MB/s]\n"
+            "\r  0%|          | 0.00/322M [00:00<?, ?B/s]\r  2%|1         | 5.77M/322M [00:00<00:05, 56.4MB/s]\r  7%|7         | 24.1M/322M [00:00<00:04, 71.2MB/s]\r 14%|#4        | 46.1M/322M [00:00<00:03, 89.1MB/s]\r 22%|##1       | 70.3M/322M [00:00<00:02, 110MB/s] \r 29%|##9       | 94.9M/322M [00:00<00:01, 131MB/s]\r 37%|###6      | 118M/322M [00:00<00:01, 150MB/s] \r 43%|####2     | 137M/322M [00:00<00:01, 155MB/s]\r 49%|####8     | 156M/322M [00:00<00:01, 159MB/s]\r 55%|#####4    | 177M/322M [00:00<00:00, 170MB/s]\r 61%|######1   | 198M/322M [00:01<00:00, 180MB/s]\r 68%|######7   | 218M/322M [00:01<00:00, 185MB/s]\r 74%|#######3  | 238M/322M [00:01<00:00, 189MB/s]\r 80%|########  | 258M/322M [00:01<00:00, 92.3MB/s]\r 88%|########7 | 283M/322M [00:01<00:00, 114MB/s] \r 95%|#########5| 307M/322M [00:01<00:00, 135MB/s]\r100%|##########| 322M/322M [00:01<00:00, 163MB/s]\n"
           ]
         }
       ]
@@ -377,9 +377,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "15624fd1-5ea7-4319-ae9f-bf05f78850e3"
+        "outputId": "8f09ac1d-c45c-4012-d877-5130761b05f9"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -431,6 +431,7 @@
         "from torch.utils.data import random_split\n",
         "import datetime\n",
         "from scipy.optimize import linear_sum_assignment\n",
+        "from more_itertools import grouper\n",
         "\n",
         "class Model():\n",
         "    def __init__(self, dataset):\n",
@@ -441,7 +442,7 @@
         "                self.theta,\n",
         "                *self.phis\n",
         "            ),\n",
-        "            lr=0.1,\n",
+        "            lr=0.00000000000001,\n",
         "            weight_decay=0.001\n",
         "        )\n",
         "\n",
@@ -495,53 +496,55 @@
         "\n",
         "        self.train_ds, self.test_ds = random_split(self.ds, [train_size, test_size], generator=torch.Generator().manual_seed(42)) # let's fix RNG seed for now\n",
         "\n",
+        "        batch_size = 5\n",
+        "\n",
         "        try:\n",
         "            for epoch in range(epoch_count):\n",
         "                ic(epoch)\n",
-        "                for i, (rev_sents_ids, review_aspects_scores) in enumerate(tqdm(self.train_ds)):\n",
-        "                    rev_thetas = self.rev_words_thetas(rev_sents_ids)\n",
-        "                    rev_phis   = self.rev_words_phis(rev_sents_ids)\n",
+        "                for i, batch in enumerate(tqdm(grouper(self.train_ds, batch_size), total=(len(self.train_ds) / batch_size))):\n",
         "                    sentence_ll_losses = []\n",
-        "                    res_sents_scores = torch.stack(\n",
-        "                        [\n",
-        "                         rev_thetas[j].sum(dim=0) + torch.tensor(tuple(rev_phis[j][a][:, review_aspects_scores[a]].sum() for a in range(self.ds.aspect_count))).to(dev) # 1 x aspect count\n",
-        "                         for j in range(len(rev_sents_ids))\n",
-        "                        ],\n",
-        "                    ) # sent count x aspect count\n",
-        "                    sents_aspect_preds_max = torch.argmax(res_sents_scores, dim=1)\n",
-        "                    row_ind, col_ind = self._linear_assignement(costs=res_sents_scores.detach().cpu().numpy())\n",
-        "                    sents_aspect_preds_linear = sents_aspect_preds_max\n",
-        "                    \n",
-        "                    sents_aspect_preds_linear[row_ind] = torch.from_numpy(col_ind).to(dev)\n",
-        "                    \n",
-        "                    for j in range(len(rev_sents_ids)):\n",
-        "                        sen_thetas = rev_thetas[j]\n",
-        "                        sen_phis   = rev_phis[j]\n",
+        "                    for (rev_sents_ids, review_aspects_scores) in batch:\n",
+        "                        rev_thetas = self.rev_words_thetas(rev_sents_ids)\n",
+        "                        rev_phis   = self.rev_words_phis(rev_sents_ids)\n",
+        "                        res_sents_scores = torch.stack(\n",
+        "                            [\n",
+        "                            rev_thetas[j].sum(dim=0) + torch.tensor(tuple(rev_phis[j][a][:, review_aspects_scores[a]].sum() for a in range(self.ds.aspect_count))).to(dev) # 1 x aspect count\n",
+        "                            for j in range(len(rev_sents_ids))\n",
+        "                            ],\n",
+        "                        ) # sent count x aspect count\n",
+        "                        sents_aspect_preds_max = torch.argmax(res_sents_scores, dim=1)\n",
+        "                        row_ind, col_ind = self._linear_assignement(costs=res_sents_scores.detach().cpu().numpy())\n",
+        "                        sents_aspect_preds_linear = sents_aspect_preds_max\n",
+        "                        \n",
+        "                        sents_aspect_preds_linear[row_ind] = torch.from_numpy(col_ind).to(dev)\n",
+        "                        \n",
+        "                        for j in range(len(rev_sents_ids)):\n",
+        "                            sen_thetas = rev_thetas[j]\n",
+        "                            sen_phis   = rev_phis[j]\n",
         "\n",
-        "                        # (most likely) aspect assignment (5)\n",
-        "                        phi_score_aa = (list((sen_phis[a][:, review_aspects_scores[a]]).sum() for a in range(self.ds.aspect_count)))\n",
-        "                        phi_score_aa = torch.tensor(phi_score_aa).to(dev)\n",
-        "                        theta_score_aa = sen_thetas.sum(dim=0) # sum across words, keep aspects dim\n",
+        "                            # (most likely) aspect assignment (5)\n",
+        "                            aspect_pred = sents_aspect_preds_linear[j]\n",
         "\n",
-        "                        aspect_pred = sents_aspect_preds_linear[j]\n",
+        "                            # sentence likelihood (6)\n",
+        "                            aspect_rating = review_aspects_scores[aspect_pred]\n",
+        "                            theta_score_ll = sen_thetas[:, aspect_pred].sum()\n",
+        "                            phi_score_ll = sen_phis[aspect_pred][:, aspect_rating].sum()\n",
         "\n",
-        "                        # sentence likelihood (6)\n",
-        "                        aspect_rating = review_aspects_scores[aspect_pred]\n",
-        "                        theta_score_ll = sen_thetas[:, aspect_pred].sum()\n",
-        "                        phi_score_ll = sen_phis[aspect_pred][:, aspect_rating].sum()\n",
+        "                            ic(theta_score_ll + phi_score_ll)\n",
+        "                            ic(theta_score_ll)\n",
+        "                            ic(phi_score_ll)\n",
+        "                            ll = torch.log(theta_score_ll + phi_score_ll)\n",
+        "                            sentence_ll_losses.append(-ll)\n",
         "\n",
-        "                        ll = torch.log(theta_score_ll + phi_score_ll)\n",
-        "                        sentence_ll_losses.append(-ll)\n",
-        "\n",
-        "                        if 0 == i % 50000:\n",
-        "                            ic(ll)\n",
-        "                    \n",
-        "                    ll_loss = torch.stack(sentence_ll_losses).mean()\n",
+        "                            # if 0 == i % 50000:\n",
+        "                            #     ic(ll)\n",
+        "                        \n",
+        "                    ll_loss = torch.stack(sentence_ll_losses).sum()\n",
         "                    self._optim.zero_grad()\n",
         "                    ll_loss.backward()\n",
         "                    self._optim.step()\n",
         "\n",
-        "                    if 0 == i % 50000:\n",
+        "                    if 0 == i % 100:\n",
         "                        ic(i)\n",
         "                        ic(ll_loss)\n",
         "                        self.dump_weights()\n",
@@ -554,7 +557,7 @@
       "metadata": {
         "id": "05JPg4ATQTOW"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -565,7 +568,7 @@
       "metadata": {
         "id": "-BbREMkrBEph"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
