Use 20K words only vocabulary

--- a/1e100ibu.ipynb
+++ b/1e100ibu.ipynb
@@ -218,13 +218,15 @@
     {
       "cell_type": "code",
       "source": [
-        "import torch\n",
+        "from collections import Counter\n",
+        "from torchtext._torchtext import (Vocab as VocabPybind) # make use of some hidden interface\n",
+        "from torchtext.vocab import Vocab, build_vocab_from_iterator\n",
         "from tqdm.notebook import trange, tqdm\n",
-        "from torchtext.vocab import build_vocab_from_iterator\n",
-        "import io\n",
-        "import spacy # nlp toolkit\n",
         "import gc # garbage collector interface\n",
+        "import io\n",
         "import re\n",
+        "import spacy # nlp toolkit\n",
+        "import torch\n",
         "\n",
         "class RateBeerReviews(torch.utils.data.Dataset):\n",
         "    def __init__(self, filepath='/content/SNAP-Ratebeer.txt', reviews_max=float('inf')):\n",
@@ -236,7 +238,7 @@
         "        self.unkn_tok = \"<unk>\" # unknown/out of vocabulary token\n",
         "        self._len = 0\n",
         "        self._fetch_data(filepath, reviews_max)\n",
-        "        self._post_process()\n",
+        "        self._post_process(max_word_count=20000) # 20K words should be okay\n",
         "\n",
         "    def _fetch_data(self, filepath, reviews_max):\n",
         "        with io.open(filepath, encoding='utf-8') as f:\n",
@@ -272,7 +274,8 @@
         "                            aspect_ratings.pop()\n",
         "                        self._len -= 1\n",
         "\n",
-        "    def _post_process(self):\n",
+        "    def _post_process(self, min_word_freq=None, max_word_count=None):\n",
+        "        assert (min_word_freq is not None) ^ bool(max_word_count is not None), \"provide one of min_word_freq and max_word_count\"\n",
         "        nlp = spacy.util.get_lang_class('en')()\n",
         "        nlp.add_pipe(\"sentencizer\", config={\"punct_chars\": ['.', '?', '!']})\n",
         "        nlp.Defaults.stop_words |= { '-', '+'}\n",
@@ -284,8 +287,17 @@
         "        gc.collect(generation=0) # force garbage collection\n",
         "        gc.collect(generation=1) # force garbage collection\n",
         "        gc.collect(generation=2) # force garbage collection\n",
-        "        self.vocab = build_vocab_from_iterator((sent for text in self._texts for sent in text), specials=[self.unkn_tok], min_freq=5)\n",
-        "        self.vocab.set_default_index(self.vocab[self.unkn_tok])\n",
+        "        sent_gen = (sent for text in self._texts for sent in text)\n",
+        "        if min_word_freq:\n",
+        "            self.vocab = build_vocab_from_iterator(sent_gen, specials=[self.unkn_tok], min_word_freq=5)\n",
+        "        else:\n",
+        "            words = Counter()\n",
+        "            for tokens in sent_gen:\n",
+        "                words.update(tokens)\n",
+        "            words = [word for word, freq in words.most_common(max_word_count)] # list sorted by frequency yikees\n",
+        "            self.vocab = Vocab(VocabPybind(words, None))\n",
+        "        self.vocab.insert_token(self.unkn_tok, 0)\n",
+        "        self.vocab.set_default_index(self.vocab[self.unkn_tok]) # set index for out-of-vocabulary words\n",
         "        print(\"Mapping words to ids..\")\n",
         "        gc.collect() # force garbage collection\n",
         "        self._texts = [tuple(self.vocab.lookup_indices(sent) for sent in text) for text in self._texts]\n",
@@ -328,7 +340,8 @@
         "    head -n 16 $RATEBEER_FILE\n",
         "    iconv -f ISO-8859-1 -t UTF-8 $RATEBEER_FILE -o {RATEBEER_FILE}.new && mv {RATEBEER_FILE}.new $RATEBEER_FILE\n",
         "else # pickle\n",
-        "    gdown --id '1ebDMDlOxtFh8B5i8lajR7q3kq-0hM02j' # https://drive.google.com/file/d/1ebDMDlOxtFh8B5i8lajR7q3kq-0hM02j/view?usp=sharing\n",
+        "    gdown --id '1VBDjyR4jpzAgzcDUGNQFguOfLC3rtOV_' # https://drive.google.com/file/d/1VBDjyR4jpzAgzcDUGNQFguOfLC3rtOV_/view?usp=sharing  # 20K words dataset\n",
+        "    # gdown --id '1ebDMDlOxtFh8B5i8lajR7q3kq-0hM02j' # https://drive.google.com/file/d/1ebDMDlOxtFh8B5i8lajR7q3kq-0hM02j/view?usp=sharing # min frequency 5 words dataset\n",
         "fi"
       ],
       "metadata": {
