Refine batch training: remove empty reviews&sentences, use Pytorch DataLoader, index using tensors, none grads instead of zeroing, use sensible LR

--- a/1e100ibu.ipynb
+++ b/1e100ibu.ipynb
@@ -14,8 +14,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -58,7 +57,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "83b20fce-88a2-48a2-f684-beb3915fe384"
+        "outputId": "977bebab-35dc-408f-a6ac-98bbad0073aa"
       },
       "execution_count": 1,
       "outputs": [
@@ -66,7 +65,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "dev = cuda\n"
+            "dev = cpu\n"
           ]
         }
       ]
@@ -81,6 +80,18 @@
         "id": "Yet9JpBt8kcx"
       },
       "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# !pip install --quiet -Iv torch==1.10.1\n",
+        "# !pip install --quiet -Iv torchtext==0.11.1"
+      ],
+      "metadata": {
+        "id": "at8Z-ETyKngp"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -152,14 +163,16 @@
       "cell_type": "code",
       "source": [
         "!pip show spacy | egrep Version\n",
-        "# we want SpaCy 3"
+        "# we want SpaCy 3\n",
+        "!pip show torch | egrep Version\n",
+        "!pip show torchtext | egrep Version"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "rvQgSM-fB7YP",
-        "outputId": "f530c196-9922-466a-c7ff-3efc8af63372"
+        "outputId": "ff9460c3-9e49-4d7f-a481-f784b3352a05"
       },
       "execution_count": null,
       "outputs": [
@@ -167,7 +180,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Version: 3.2.1\n"
+            "Version: 2.2.4\n",
+            "Version: 1.10.1\n",
+            "Version: 0.11.1\n"
           ]
         }
       ]
@@ -283,10 +298,10 @@
         "        print(\"Spacy pipe (tokenization&sentence split)..\")\n",
         "        gc.collect() # force garbage collection\n",
         "        self._texts = [tuple(list(tok.lower_ for tok in sent if not tok.is_stop and not tok.is_punct and not tok.is_space and len(tok) > 2) for sent in doc.sents) for doc in nlp.pipe(self._texts)]\n",
+        "        for i, text in enumerate(self._texts):\n",
+        "            assert 0 != len(text) # make sure no empty reviews again (new could be introduced by removing stop words unfortunately)\n",
         "        print(\"Building vocab (word-id mapping)..\")\n",
-        "        gc.collect(generation=0) # force garbage collection\n",
-        "        gc.collect(generation=1) # force garbage collection\n",
-        "        gc.collect(generation=2) # force garbage collection\n",
+        "        gc.collect() # force garbage collection\n",
         "        sent_gen = (sent for text in self._texts for sent in text)\n",
         "        if min_word_freq:\n",
         "            self.vocab = build_vocab_from_iterator(sent_gen, specials=[self.unkn_tok], min_word_freq=5)\n",
@@ -304,8 +319,15 @@
         "        gc.collect() # force garbage collection\n",
         "\n",
         "    def __getitem__(self, i):\n",
-        "        sentences = self._texts[i]\n",
-        "        ratings = tuple(self._aspect_ratings[a][i] for a in range(self.aspect_count))\n",
+        "        # # 1 # python\n",
+        "        # sentences = tuple(sent for sent in self._texts[i])\n",
+        "        # ratings = tuple(self._aspect_ratings[a][i] for a in range(self.aspect_count))\n",
+        "        # 2 # tensor\n",
+        "        sentences = tuple(torch.LongTensor(sent) for sent in self._texts[i])\n",
+        "        ratings = torch.LongTensor(tuple(self._aspect_ratings[a][i] for a in range(self.aspect_count)))\n",
+        "        # # 3 # dev\n",
+        "        # sentences = tuple(torch.tensor(sent) for sent in self._texts[i])\n",
+        "        # ratings = torch.tensor(tuple(self._aspect_ratings[a][i] for a in range(self.aspect_count)))\n",
         "        return (sentences, ratings)\n",
         "\n",
         "    def __len__(self):\n",
@@ -349,7 +371,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "df049b4f-2509-4789-be05-8370cbc55cbe"
+        "outputId": "b297e53e-6733-4ef2-b4ed-b7b1e297dd6c"
       },
       "execution_count": 4,
       "outputs": [
@@ -360,7 +382,7 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1VBDjyR4jpzAgzcDUGNQFguOfLC3rtOV_\n",
             "To: /content/ratebeer-20K-vocab.pickle\n",
-            "\r  0%|          | 0.00/319M [00:00<?, ?B/s]\r  1%|1         | 4.72M/319M [00:00<00:13, 24.1MB/s]\r  7%|7         | 22.5M/319M [00:00<00:09, 32.5MB/s]\r 11%|#         | 34.1M/319M [00:00<00:06, 41.0MB/s]\r 13%|#3        | 42.5M/319M [00:00<00:05, 46.3MB/s]\r 21%|##        | 65.5M/319M [00:00<00:04, 60.9MB/s]\r 24%|##4       | 77.6M/319M [00:00<00:03, 66.5MB/s]\r 32%|###1      | 101M/319M [00:00<00:02, 81.2MB/s] \r 36%|###5      | 114M/319M [00:01<00:02, 87.3MB/s]\r 41%|####1     | 132M/319M [00:01<00:01, 103MB/s] \r 46%|####5     | 146M/319M [00:01<00:01, 107MB/s]\r 51%|#####1    | 163M/319M [00:01<00:01, 119MB/s]\r 55%|#####5    | 177M/319M [00:01<00:01, 116MB/s]\r 61%|######    | 193M/319M [00:01<00:01, 124MB/s]\r 66%|######5   | 209M/319M [00:01<00:00, 132MB/s]\r 70%|#######   | 224M/319M [00:01<00:00, 119MB/s]\r 77%|#######6  | 244M/319M [00:01<00:00, 131MB/s]\r 81%|########1 | 258M/319M [00:02<00:00, 122MB/s]\r 86%|########6 | 274M/319M [00:02<00:00, 131MB/s]\r 90%|######### | 288M/319M [00:02<00:00, 127MB/s]\r 97%|#########6| 309M/319M [00:02<00:00, 143MB/s]\r100%|##########| 319M/319M [00:02<00:00, 129MB/s]\n"
+            "\r  0%|          | 0.00/393M [00:00<?, ?B/s]\r  2%|2         | 7.86M/393M [00:00<00:04, 77.8MB/s]\r  4%|4         | 17.3M/393M [00:00<00:06, 61.7MB/s]\r  7%|6         | 25.7M/393M [00:00<00:06, 56.1MB/s]\r  9%|8         | 34.1M/393M [00:00<00:07, 49.7MB/s]\r 11%|#         | 42.5M/393M [00:00<00:07, 47.6MB/s]\r 15%|#5        | 59.2M/393M [00:01<00:06, 52.3MB/s]\r 19%|#9        | 76.0M/393M [00:01<00:05, 55.6MB/s]\r 24%|##3       | 92.8M/393M [00:01<00:05, 59.4MB/s]\r 28%|##7       | 110M/393M [00:01<00:04, 63.9MB/s] \r 32%|###2      | 126M/393M [00:02<00:03, 68.1MB/s]\r 36%|###6      | 143M/393M [00:02<00:03, 67.9MB/s]\r 41%|####      | 160M/393M [00:02<00:03, 72.3MB/s]\r 45%|####4     | 177M/393M [00:02<00:02, 72.2MB/s]\r 51%|#####1    | 201M/393M [00:02<00:02, 91.5MB/s]\r 54%|#####4    | 214M/393M [00:03<00:02, 81.8MB/s]\r 58%|#####7    | 227M/393M [00:03<00:02, 80.0MB/s]\r 64%|######4   | 252M/393M [00:03<00:01, 85.1MB/s]\r 68%|######8   | 268M/393M [00:03<00:01, 98.3MB/s]\r 71%|#######1  | 279M/393M [00:03<00:01, 99.0MB/s]\r 76%|#######6  | 299M/393M [00:03<00:00, 116MB/s] \r 79%|#######9  | 312M/393M [00:03<00:00, 107MB/s]\r 83%|########3 | 328M/393M [00:04<00:00, 99.9MB/s]\r 90%|######### | 354M/393M [00:04<00:00, 122MB/s] \r 94%|#########4| 370M/393M [00:04<00:00, 117MB/s]\r100%|#########9| 392M/393M [00:04<00:00, 136MB/s]\r100%|##########| 393M/393M [00:04<00:00, 87.1MB/s]\n"
           ]
         }
       ]
@@ -373,24 +395,36 @@
         "\n",
         "drive.mount('/drive')\n",
         "\n",
-        "DATASET_PICKLE='/content/ratebeer.pickle'\n",
+        "# DATASET_PICKLE='/content/ratebeer.pickle'\n",
         "DATASET_PICKLE='/content/ratebeer-20K-vocab.pickle'\n",
         "RECREATE_PICKLE = False\n",
         "\n",
         "if RECREATE_PICKLE:\n",
+        "    rb = RateBeerReviews()\n",
         "    with open(DATASET_PICKLE, 'wb') as f:\n",
-        "        rb = RateBeerReviews()\n",
         "        print('Dumping..')\n",
-        "        pickle.dump(rb, f)\n",
+        "        torch.save(rb, f)\n",
         "else:\n",
         "    with open(DATASET_PICKLE, 'rb') as f:\n",
-        "        rb = pickle.load(f)"
+        "        rb = torch.load(f)"
       ],
       "metadata": {
-        "id": "N5zmSYDBCg4B"
+        "id": "N5zmSYDBCg4B",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "912f1f45-1e3b-441e-9422-93ec1bb9c268"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /drive\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -406,7 +440,7 @@
         "id": "RZ0p4rxp2UJE",
         "outputId": "f0d8fb49-7a4d-4b5b-b50a-4aa48c3afafa"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -430,10 +464,11 @@
     {
       "cell_type": "code",
       "source": [
-        "from torch.utils.data import random_split\n",
+        "from torch.utils.data import random_split, DataLoader\n",
         "import datetime\n",
         "from scipy.optimize import linear_sum_assignment\n",
         "from more_itertools import grouper\n",
+        "\n",
         "\n",
         "class Model():\n",
         "    def __init__(self, dataset):\n",
@@ -444,8 +479,8 @@
         "                self.theta,\n",
         "                *self.phis\n",
         "            ),\n",
-        "            lr=0.00000000000001,\n",
-        "            weight_decay=0.001\n",
+        "            lr=0.1,\n",
+        "            weight_decay=0.00001\n",
         "        )\n",
         "\n",
         "    def init_weights(self):\n",
@@ -460,8 +495,8 @@
         "\n",
         "        # introduce separate phi for each aspect\n",
         "        self.phis = [torch.rand((word_count, self.ds.aspect_max[i])).to(dev) for i in range(self.ds.aspect_count)]\n",
-        "        # normalize that sum across all words is 1 for a given aspect (eq. 7)\n",
-        "        self.phis = [phi / phi.sum(dim=0) for phi in self.phis]\n",
+        "        # # normalize that sum across all words is 1 for a given aspect (eq. 7) # do not normalize as for now\n",
+        "        # self.phis = [phi / phi.sum(dim=0) for phi in self.phis]\n",
         "        for phi in self.phis: phi.requires_grad_()\n",
         "    \n",
         "    def rev_words_thetas(self, rev_sens_ids):\n",
@@ -477,36 +512,36 @@
         "        return [[self.phis[aspect_idx][sen_ids, :] for aspect_idx in range(self.ds.aspect_count)] for sen_ids in rev_sens_ids]\n",
         "    \n",
         "    def dump_weights(self, dest_dir='/drive/MyDrive/Colab Notebooks/1e100ibu/saves/'):\n",
-        "        torch.save(self.phis,  f'{dest_dir}{datetime.datetime.now()}-theta')\n",
-        "        torch.save(self.theta, f'{dest_dir}{datetime.datetime.now()}-phis')\n",
+        "        weights = {'phis': self.phis, 'theta': self.theta}\n",
+        "        torch.save(weights,  f'{dest_dir}{datetime.datetime.now()}')\n",
         "\n",
         "    def load_weights(self, src_path):\n",
-        "        self.theta = torch.load(f'src_path-theta')\n",
-        "        self.phis  = torch.load(f'src_path-phis')\n",
+        "        weights = torch.load(src_path)\n",
+        "        self.theta = weights['theta']\n",
+        "        self.phis  = weights['phis']\n",
         "    \n",
         "\n",
         "    def _linear_assignement(self, costs):\n",
         "        return linear_sum_assignment(costs, maximize=True)\n",
         "    \n",
-        "    def aspecs_assignments(self):\n",
-        "        pass\n",
-        "    \n",
         "    def train(self, epoch_count=1):\n",
         "        train_size = int(0.8 * len(self.ds))\n",
-        "        # train_size = 1000 # use latter; this is for debuggin' only\n",
+        "        # train_size = 1000 # use the latter; this is for debuggin' only\n",
         "        test_size = len(self.ds) - train_size\n",
         "\n",
-        "        self.train_ds, self.test_ds = random_split(self.ds, [train_size, test_size], generator=torch.Generator().manual_seed(42)) # let's fix RNG seed for now\n",
+        "        generator = torch.Generator().manual_seed(42) # let's fix RNG seed for now\n",
         "\n",
-        "        batch_size = 5\n",
+        "        self.train_ds, self.test_ds = random_split(self.ds, [train_size, test_size], generator=generator) \n",
         "\n",
+        "        train_loader = DataLoader(self.train_ds, batch_size=100, shuffle=True, generator=generator, collate_fn=lambda x: x) # do not use default collate function as it requires fixed-length input and raises this exception otherwise https://github.com/pytorch/pytorch/issues/42654\n",
         "        try:\n",
         "            for epoch in range(epoch_count):\n",
         "                ic(epoch)\n",
-        "                for i, batch in enumerate(tqdm(grouper(self.train_ds, batch_size), total=(len(self.train_ds) / batch_size))):\n",
+        "                # next(iter(train_loader))\n",
+        "                for i, batch in enumerate(tqdm(train_loader)):\n",
         "                    sentence_ll_losses = []\n",
         "                    for (rev_sents_ids, review_aspects_scores) in batch:\n",
-        "                        rev_thetas = self.rev_words_thetas(rev_sents_ids)\n",
+        "                        rev_thetas = self.rev_words_thetas(rev_sents_ids) # todo fix for empty sentences (IndexError: tensors used as indices must be long, byte or bool tensors)\n",
         "                        rev_phis   = self.rev_words_phis(rev_sents_ids)\n",
         "                        res_sents_scores = torch.stack(\n",
         "                            [\n",
@@ -521,6 +556,9 @@
         "                        sents_aspect_preds_linear[row_ind] = torch.from_numpy(col_ind).to(dev)\n",
         "                        \n",
         "                        for j in range(len(rev_sents_ids)):\n",
+        "                            # if not rev_sents_ids[j]: # ignore empty sentences if they are list, but not tensor (unused)\n",
+        "                            if 0 == rev_sents_ids[j].numel(): # ignore empty sentences\n",
+        "                                continue\n",
         "                            sen_thetas = rev_thetas[j]\n",
         "                            sen_phis   = rev_phis[j]\n",
         "\n",
@@ -532,21 +570,15 @@
         "                            theta_score_ll = sen_thetas[:, aspect_pred].sum()\n",
         "                            phi_score_ll = sen_phis[aspect_pred][:, aspect_rating].sum()\n",
         "\n",
-        "                            ic(theta_score_ll + phi_score_ll)\n",
-        "                            ic(theta_score_ll)\n",
-        "                            ic(phi_score_ll)\n",
         "                            ll = torch.log(theta_score_ll + phi_score_ll)\n",
         "                            sentence_ll_losses.append(-ll)\n",
-        "\n",
-        "                            # if 0 == i % 50000:\n",
-        "                            #     ic(ll)\n",
         "                        \n",
         "                    ll_loss = torch.stack(sentence_ll_losses).sum()\n",
-        "                    self._optim.zero_grad()\n",
+        "                    self._optim.zero_grad(set_to_none=True)\n",
         "                    ll_loss.backward()\n",
         "                    self._optim.step()\n",
         "\n",
-        "                    if 0 == i % 100:\n",
+        "                    if 0 == i % 200:\n",
         "                        ic(i)\n",
         "                        ic(ll_loss)\n",
         "                        self.dump_weights()\n",
@@ -554,12 +586,18 @@
         "        except KeyboardInterrupt:\n",
         "            print('Interrupted.')\n",
         "        except Exception as e:\n",
+        "            ic(rev_sents_ids)\n",
+        "            ic(sen_phis)\n",
+        "            ic(sen_thetas)\n",
+        "            ic(theta_score_ll + phi_score_ll)\n",
+        "            ic(theta_score_ll)\n",
+        "            ic(phi_score_ll)\n",
         "            raise e\n"
       ],
       "metadata": {
         "id": "05JPg4ATQTOW"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -570,7 +608,7 @@
       "metadata": {
         "id": "-BbREMkrBEph"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -590,7 +628,7 @@
         ""
       ],
       "metadata": {
-        "id": "MepV7uCBul-C"
+        "id": "Sms-vI1OTGdC"
       },
       "execution_count": null,
       "outputs": []
